# thug

./: .bandit  .codecov.yml  .deepsource.toml  .gitattributes  .gitignore  .landscape.yaml  .lgtm.yml  .pre-commit-config.yaml  .project  .pydevproject  .pylintrc  .pyup.yml  .readthedocs.yaml  .safety-policy.yml  .travis.yml  COPYING  Dockerfile  MANIFEST.in  README  README.md  README.rst  _config.yml  _sources  _static  dev.sh  ez_setup.py  index.html  index.md  params.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-ubuntu.sh  setup.cfg  setup.py  style-fix.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: build-linux-python310.yml  build-linux-python311.yml  build-linux-python36.yml  build-linux-python37.yml  build-linux-python38.yml  build-linux-python39.yml  build-linux.yml  build-osx.yml  codeql-analysis.yml  codeql.yml  docker.yml  linux.yml  osx.yml  release.yml  safety.yml
conf/: inspector.json  thug.conf
conf/hooks/: README
conf/personalities/: galaxy2chrome25.json  galaxy2chrome29.json  ipadchrome33.json  linuxchrome26.json  osx10chrome19.json  osx10chrome80.json  osx10chrome97.json  osx11safari14.json  prefix_allocation.txt  win7chrome20.json  winxpfirefox12.json  winxpsafari5.json
conf/plugins/: README
conf/scripts/: eval.js
dev/: requirements-dev.txt
doc/: .buildinfo  Makefile  api.html  build.html  configuration.html  docker.html  genindex.html  index.html  intro.html  jshooks.html  logging.html  make.bat  objects.inv  plugins.html  search.html  searchindex.js  usage.html
doc/_sources/: build.txt  index.txt  intro.txt
doc/source/: api.rst  build.rst  conf.py  configuration.rst  docker.rst  index.rst  intro.rst  jshooks.rst  logging.rst  mongodb.rst  plugins.rst  requirements.txt  usage.rst
doc/sources/: api.rst.txt  api.txt  build.rst.txt  build.txt  configuration.rst.txt  configuration.txt  docker.rst.txt  docker.txt  index.rst.txt  index.txt  intro.rst.txt  intro.txt  jshooks.rst.txt  logging.rst.txt  logging.txt  plugins.rst.txt  plugins.txt  usage.rst.txt  usage.txt
doc/static/: classic.css  documentation_options.js  searchtools.js  websupport.js
docker/: Dockerfile
docs/: requirements.txt
docs/source/: api.rst  build.rst  conf.py  configuration.rst  docker.rst  intro.rst  jshooks.rst  logging.rst  plugins.rst  requirements.txt  usage.rst
hpfeeds/: ThugHPFeeds.py  hpfeeds.conf.sample  hpfeeds.py
html/: .buildinfo  genindex.html
html/_sources/: usage.txt
patches/: PyV8-patch1.diff  V8-patch1.diff  V8-patch2.diff  osx-setup.diff
samples/: suite.feature
samples/AST/: test1.html  test2.html  test3.html  test4.html  test5.html  test99.html
samples/Events/: testDocumentEvent.html  testEvent1.html  testEvent10.html  testEvent13.html  testEvent2.html  testEvent6.html  testEvents.html  testMouseEvent.html  testMouseMove.html  testStorageEvent.html
samples/classifiers/: test3.html  test6.html  test7.html
samples/exploits/: 22196.html  22811_Elazar.html  2575.html  2mix.html  33243-excel.html  33243-office.html  3420.html  4043.html  4226.html  4230.html  4250.html  4351.html  4829.html  4869.html  4909.html  4974.html  4986.html  5043.html  5049.html  5051.html  5052.html  5205.html  5217.html  5218.html  5271.html  5272.html  55875.html  AnswerWorks.htm  AnswerWorks3.htm  BaiduBar.htm  BitDefender.htm  CABrightStor.htm  CVE-2008-1309-Real.html  Comodo.htm  ConnectAndEnterRoom.htm  DPClient.htm  DirectShow.htm  DivX.htm  Domino3.html  FileUploader.htm  (+60 more)
samples/features/: test1.html  test12.html  test14.html  test15.html  test17.html  test3.html  test5.html  test6.html  test8.html  test9.html
samples/jQuery/: test-jquery-1.html  test-jquery-10.html  test-jquery-11.html  test-jquery-12.html  test-jquery-14.html  test-jquery-16.html  test-jquery-24.html  test-jquery-25.html  test-jquery-27.html  test-jquery-29.html  test-jquery-3.html  test-jquery-32.html  test-jquery-33.html  test-jquery-4.html  test-jquery-5.html  test-jquery-6.html  test-jquery-8.html  test-jquery-9.html
samples/jquery/: test-jquery-2.html  test-jquery-5.html  test-jquery-7.html
samples/misc/: PluginDetect-0.7.6.html  PluginDetect-0.7.8.html  PluginDetect-0.7.9.html  PluginDetect-0.9.1.html  PluginDetect.html  meta_refresh.html  meta_x_ua_compatible.html  test1.html  test2.html  test4.js  test5.html  testAcroPDF.html  testAdodbStream.html  testAnchor1.html  testAnchor2.html  testAnchor5.html  testAnchors1.html  testAnchors2.html  testAnchors3.html  testAppendChild.html  testApplyElement.html  testAsync.html  testAttrNode.html  testCSSStyleDeclaration.html  testCharacterSet.html  testChrome.html  testClassList1.html  testClassList2.html  testClassList3.html  testClassList4.html  testClipboardData.html  testCloneNode.html  testCloneNode2.html  testCommentNode.html  testCreateHTMLDocument.html  testCreateStyleSheet.html  testCreateStyleSheetNoHead.html  testCrypto.html  testCurrentScript.html  testDOMImplementation.html  (+109 more)
samples/steps/: exploits.py  jquery.py  misc.py
src/: config.ini  requirements.txt  setup.py  thug.py  thugctrl.py  thugd.py
src/AST/: AST.py  JavaScript.tokens  JavaScriptLexer.py  JavaScriptParser.py
src/ActiveX/: ActiveX.py  CLSID.py
src/Classifier/: BaseClassifier.py  JSClassifier.py  SampleClassifier.py  URLClassifier.py  abstractmethod.py  jsclassifier.json  urlclassifier.json
src/DOM/: CCInterpreter.py  Chrome.py  ClipboardData.py  Components.py  Console.py  Crypto.py  DFT.py  External.py  HTTPSession.py  History.py  JSClass.py  LocalStorage.py  Location.py  MIMEHandler.py  MimeType.py  MimeTypes.py  Navigator.py  Opera.py  Personality.py  Plugin.py  Plugins.py  SchemeHandler.py  Screen.py  SessionStorage.py  Storage.py  UserProfile.py  Utils.py  WebTracking.py  Window.py  compatibility.py  sessionStorage.js  thug.js  w3c.py
src/Debugger/: Debugger.py  Global.py  Shellcode.py
src/Distributed/: thugd.py
thug/: __init__.py  thug.py
tools/: README.md  checkinstall.py
utils/: MongoUtils.py  checkinstall.py  fingerprint.html  requirements.txt  setup-debian7.sh  setup-osx.sh  setup-ubuntu.sh
(+1234 files in other folders)
