[metadata]
name = thug
version = attr: thug.__version__
author = Angelo Dell'Aera
author_email = angelo.dellaera@honeynet.org
description = Low-interaction honeyclient Thug
license = GPLv2
url = http://buffer.github.io/thug/
download_url = https://github.com/buffer/thug/
platforms = Linux, Darwin
project_urls =
    Docs = https://thug-honeyclient.readthedocs.io/en/latest/
    Bugs = https://github.com/buffer/thug/issues
    Funding = https://buffer.github.io/thug/

license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst

classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Security

[options]
zip_safe = True
python_requires  = >=3.8, <4
install_requires = file: requirements.txt
packages = find_namespace:
include_package_data = True

[options.packages.find]
exclude =
	docker*
	docs*
	tests*
	tools*
    utils*

[options.package_data]
conf = *.json, *.conf, *.yar, README

[options.extras_require]
test =
	elasticsearch==7.17.7
	pytesseract
	pygraphviz
	imgkit==1.1.0
	speakeasy-emulator
	codecov
	ElasticMock
	mock
	mongomock
	pre-commit
	safety
	pytest
	pytest-timeout
	pytest-cov
	tox

[options.entry_points]
console_scripts =
    thug = thug.thug:main

[coverage:run]	
omit =	
    thug/Plugins/IPlugin.py
