[metadata]
name = thug
version = attr: thug.__version__
author = Angelo Dell'Aera
author_email = angelo.dellaera@honeynet.org
description = Low-interaction honeyclient Thug
license = GPLv2
url = http://buffer.github.io/thug/
download_url = https://github.com/buffer/thug/
platforms = Linux, Darwin
project_urls =
    Docs = https://thug-honeyclient.readthedocs.io/en/latest/
    Bugs = https://github.com/buffer/thug/issues
    Funding = https://buffer.github.io/thug/

license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst

classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Security

[options]
zip_safe = True
python_requires = >=3.8, <4
install_requires =
	PySocks==1.7.1
	beautifulsoup4==4.11.1
	charset-normalizer==2.1.1
	cssutils==2.6.0
	html5lib==1.1
	lxml==4.9.1
	networkx==2.8.8
	pefile==2022.5.30
	promise==2.3
	pylibemu==0.8
	pymongo==4.3.3
	python-magic==0.4.27
	rarfile==4.0
	requests==2.28.1
	requests-futures==1.0.0
	ssdeep==3.4
	yara-python==4.2.3
	zope.interface==5.5.2

packages = find_namespace:
include_package_data = True

[options.packages.find]
exclude =
	docker*
	docs*
	tests*
	tools*
	utils*

[options.package_data]
conf = *.json, *.conf, *.yar, README

[options.extras_require]
test =
	elasticsearch==7.17.7
	pytesseract
	pygraphviz
	imgkit==1.1.0
	speakeasy-emulator
	codecov
	ElasticMock
	mock
	mongomock
	pre-commit
	safety
	pytest
	pytest-timeout
	pytest-cov
	tox

[options.entry_points]
console_scripts =
    thug = thug.thug:main

[coverage:run]	
omit =	
    thug/Plugins/IPlugin.py
